# mini-projects

./: .gitignore  README.md
cpp/: README.md
cpp/bats-pitch/: CMakeLists.txt  PitchMessage.h  main.cpp  message.h  order.h  pitch_example_data_test  vol_calc.h
cpp/conan-packages/gcc/: conanfile.py
cpp/eigen-benchmarks/: CMakeLists.txt  conanfile.txt  main.cpp  run.sh
go/instruments-microservice/: instruments.pb.go  instruments.proto
java/zmq_forwarder/: pom.xml
java/zmq_forwarder/src/main/java/zmq_forwarder/: Forwarder.java  Publisher.java  Subscriber.java
python/: BatsPitchParser.ipynb  ForwardStepwise.ipynb  LocalLinear.ipynb  xx  xy
python/local_linear/: local_linear.py  requirements.txt
python/stepwise/: stepwise.py
